# bfg-foodchain-webapp

./: .env  .env.docker  Dockerfile  compose.yml  manage.py  pyproject.toml  requirements.dev.txt  requirements.txt
app/: admin.py  functions.py  models.py  serializers.py  urls.py  utils.py  views.py
app/migrations/: 0001_initial.py  0002_food_iron_foodcategory_image.py  0002_notification_mobile.py  0003_delete_foodreplacement.py
bfg_foodchain_webapp/: asgi.py  settings.py  wsgi.py
